--- a/frontend/index.html
+++ b/frontend/index.html
@@ -51,10 +51,13 @@
     <label for="password"> Contraseña:</label>
     <input type="password" name="password" id="password" placeholder="Números, letras y un símbolo">
 
-    <p> Estoy de acuerdo con <a href="#"> Terminos y Condiciones </a></p>
+    <div class="container">
+      <input class="checkmark"  checked="checked" type="checkbox">
+      Estoy de acuerdo con <a href="#"> Terminos y Condiciones </a>
+    </div>
 
-    <input type="submit" value="Registrarme">
-    <input type="reset" value="Borrar">
+    <input class="btn" id="submit" type="submit" value="Registrarme">
+    <input class="btn"  type="reset" value="Borrar">
 
     <p> <a href="#"> ¿Ya tengo un usuario? </a></p>
 
