--- a/frontend/index.html
+++ b/frontend/index.html
@@ -61,9 +61,19 @@
 
     <p> <a href="#"> ¿Ya tengo un usuario? </a></p>
 
-
-
   </form>
+
+  <footer>
+    <section class="CineColombia">
+      <img id="CineColombia" src="assets\CineColombia.png" alt="CineColombia">
+    </section>
+
+    <section>
+      <a href=""></a>
+      <a href=""></a>
+      <a href=""></a>
+    </section>
+  </footer>
 
 
   <script>
