--- a/frontend/index.html
+++ b/frontend/index.html
@@ -69,9 +69,10 @@
     </section>
 
     <section>
-      <a href=""></a>
-      <a href=""></a>
-      <a href=""></a>
+      <a href="#"> información legal</a>
+      <a href="#"> Acerca de Cineco</a>
+      <a href="#"> Contactanos PQRS</a>
+      <a href="#">Preguntas frecuentes</a>
     </section>
   </footer>
 
