--- a/frontend/index.html
+++ b/frontend/index.html
@@ -52,28 +52,31 @@
     <input type="password" name="password" id="password" placeholder="Números, letras y un símbolo">
 
     <div class="container">
-      <input class="checkmark"  checked="checked" type="checkbox">
+      <input class="checkmark" checked="checked" type="checkbox">
       Estoy de acuerdo con <a href="#"> Terminos y Condiciones </a>
     </div>
 
     <input class="btn" id="submit" type="submit" value="Registrarme">
-    <input class="btn"  type="reset" value="Borrar">
+    <input class="btn" type="reset" value="Borrar">
 
     <p> <a href="#"> ¿Ya tengo un usuario? </a></p>
 
   </form>
 
   <footer>
-    <section class="CineColombia">
-      <img id="CineColombia" src="assets\CineColombia.png" alt="CineColombia">
-    </section>
+    <div class="center">
+      <section class="CineColombia">
+        <img id="CineColombia" src="assets\CineColombia.png" alt="CineColombia">
+      </section>
 
-    <section>
-      <a href="#"> información legal</a>
-      <a href="#"> Acerca de Cineco</a>
-      <a href="#"> Contactanos PQRS</a>
-      <a href="#">Preguntas frecuentes</a>
-    </section>
+      <section class="links">
+        <a class="info"  href="#"> información legal</a>
+        <a href="#"> Acerca de Cineco</a>
+        <a href="#"> Contactanos PQRS</a>
+        <a href="#">Preguntas frecuentes</a>
+      </section>
+    </div>
+
   </footer>
 
 
