--- a/frontend/index.html
+++ b/frontend/index.html
@@ -52,8 +52,7 @@
     <input type="password" name="password" id="password" placeholder="Números, letras y un símbolo">
 
     <div class="container">
-      <input class="checkmark" checked="checked" type="checkbox">
-      Estoy de acuerdo con <a href="#"> Terminos y Condiciones </a>
+      <input class="checkmark" checked="checked" type="checkbox">Estoy de acuerdo con <a href="#">Terminos y Condiciones </a>
     </div>
 
     <input class="btn" id="submit" type="submit" value="Registrarme">
@@ -71,9 +70,9 @@
 
       <section class="links">
         <a class="info"  href="#"> información legal</a>
-        <a href="#"> Acerca de Cineco</a>
-        <a href="#"> Contactanos PQRS</a>
-        <a href="#">Preguntas frecuentes</a>
+        <a class="cineco"  href="#"> Acerca de Cineco</a>
+        <a class="Contactanos" href="#"> Contactanos PQRS</a>
+        <a class="Preguntas" href="#">Preguntas frecuentes</a>
       </section>
     </div>
 
