--- a/frontend/ApiMovies.html
+++ b/frontend/ApiMovies.html
@@ -29,10 +29,19 @@
     </div>
 
     <div class="resultMovies">
-        
+        <div class="flip-card">
+            <div class="flip-card-inner">
+                <div class="flip-card-front">
+                    <div id="pokedex"></div>
+                </div>
+                <div class="flip-card-back">
+                    <div id="pokedex1"></div>
+                </div>
+            </div>
+        </div>
+
     </div>
-
-
+    
     <footer>
         <div class="center">
           <section class="CineColombia">
