--- a/frontend/ApiMovies.html
+++ b/frontend/ApiMovies.html
@@ -32,10 +32,10 @@
         <div class="flip-card">
             <div class="flip-card-inner">
                 <div class="flip-card-front">
-                    <div id="pokedex"></div>
+                    <div id="movies"></div>
                 </div>
                 <div class="flip-card-back">
-                    <div id="pokedex1"></div>
+                    <div id="movies1"></div>
                 </div>
             </div>
         </div>
