--- a/frontend/index.html
+++ b/frontend/index.html
@@ -96,7 +96,7 @@
           rolesSelect.appendChild(option);
         });
 
-        // Escuchar los cambios en la lista desplegable
+        // los cambios en la lista desplegable
         rolesSelect.addEventListener('change', () => {
           const selectedRoleId = rolesSelect.value;
           mostrarInformacionRol(selectedRoleId);
