--- a/frontend/index.html
+++ b/frontend/index.html
@@ -55,7 +55,10 @@
       <input class="checkmark" checked="checked" type="checkbox">Estoy de acuerdo con <a href="#">Terminos y Condiciones </a>
     </div>
 
-    <input class="btn" id="submit" type="submit" value="Registrarme">
+    <button class="btn"  id="moviesBtn" onclick="window.open('http://127.0.0.1:5500/frontend/ApiMovies.html')">
+      Registrarme
+    </button>
+
     <input class="btn" type="reset" value="Borrar">
 
     <p> <a href="#"> ¿Ya tengo un usuario? </a></p>
