--- a/frontend/ApiMovies.html
+++ b/frontend/ApiMovies.html
@@ -18,7 +18,7 @@
     </header>
 
     <div class="container">
-        <input type="text" name="text" class="input" placeholder="Ingrese el nombre de la pelicula">
+        <input type="text" class="input" id="search" placeholder="Ingrese el nombre de la pelicula">
         <button class="search__btn">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="22" height="22">
                 <path
